--- a/public/css/loginpage.css
+++ b/public/css/loginpage.css
@@ -2,7 +2,7 @@
 body, html {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: Montserrat, sans-serif;
     height: 100%;
 }
 
@@ -14,7 +14,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    font-family: Arial, sans-serif;
+    font-family: Montserrat, sans-serif;
 }
 
 /* Login Container */
@@ -23,8 +23,9 @@ body {
     max-width: 400px;
     padding: 20px;
     background-color: #ffffff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    border-radius: 15px;
     text-align: center;
 }
 
@@ -34,7 +35,7 @@ body {
 }
 
 .logo-img {
-    width: 120px;
+    width: 125px;
     height: auto;
 }
 
@@ -53,28 +54,39 @@ body {
 
 /* Form Inputs */
 .form-input {
-    width: 100%;
+    /* width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 1rem;
-    color: #333;
+    color: #333; */
+    background-color: rgb(159, 197, 232);
+    border: none;
+    padding: 12px 15px;
+    margin: 8px 0;
+    width: 92.5%;
+    border-radius: 10px;
+    font-family: Montserrat, sans-serif;
 }
 
 /* Submit Button */
 .btn-primary {
     width: 100%;
     padding: 12px;
-    background-color: #00a93b;
+    background-color: rgb(106, 41, 131);
     color: white;
-    border: none;
-    border-radius: 5px;
+    border-radius: 50px;
     font-size: 1rem;
     cursor: pointer;
+    font-family: Montserrat, sans-serif;
+    font-weight: bold;
+    border: 1px solid black;
+    transition: transform 80ms ease-in;
+    letter-spacing: 1px;
 }
 
 .btn-primary:hover {
-    background-color: #00a93b;
+    opacity: 0.8;
 }
 
 /* Remember Me Checkbox */
